--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,27 +1,22 @@
 
-name: Generate snake game
+name: Generate snake animation
 
 on:
   schedule:
     - cron: "* */8 * * *"
-  workflow_dispatch:
 
 jobs:
   build:
-    name: Jobs to update datas
     runs-on: ubuntu-latest
     steps:
-      - uses: Sutil/snk@master
-        id: snake-gif
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+    
+      - name: Generate Snake Game
+        uses: Platane/snk@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          svg_out_path: dist/github-contribution-grid-snake2.svg
-          snake_color: 'blue'
-
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
+          outputs: |
+            dist/github-snake.svg
+            dist/github-snake-dark.svg?palette=github-dark
+            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
