--- a/.github/workflows/age.yml
+++ b/.github/workflows/age.yml
@@ -12,6 +12,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
       - name: Calculate age
         id: calculate_age
         run: |
@@ -19,10 +24,11 @@ jobs:
           birth_year=2005
           age=$((current_year - birth_year))
           echo "::set-output name=age::$age"
+          echo "::set-output name=old::$((age - 1))"
 
       - name: Update README
         run: |
-          sed -i "s/{age}/$(echo ${{ steps.calculate_age.outputs.age }})/" README.md
+          sed -i "s/<span>${{ steps.calculate_age.outputs.old }}</span>/<span>${{ steps.calculate_age.outputs.age }}</span>/" README.md
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           git commit -am "[CHORE] Update age in README"
