--- a/.github/workflows/age.yml
+++ b/.github/workflows/age.yml
@@ -9,13 +9,7 @@ jobs:
   update-age:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
+      - uses: actions/checkout@v3
 
       - name: Calculate age
         id: calculate_age
@@ -23,12 +17,12 @@ jobs:
           current_year=$(date +'%Y')
           birth_year=2005
           age=$((current_year - birth_year))
-          echo "::set-output name=age::$age"
-          echo "::set-output name=old::$((age - 1))"
+          echo "age=$age" >> $GITHUB_OUTPUT
 
       - name: Update README
         run: |
-          sed -i "s/<span>${{ steps.calculate_age.outputs.old }}</span>/<span>${{ steps.calculate_age.outputs.age }}</span>/" README.md
+          old_age=$(( {{ steps.calculate_age.outputs.age }} - 1 ))
+          sed -i "s/<span>$old_age</span>/<span>{{ steps.calculate_age.outputs.age }}</span>/" README.md
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           git commit -am "[CHORE] Update age in README"
