--- a/.github/workflows/age.yml
+++ b/.github/workflows/age.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Update README with age minus 1
         run: |
           old_age=$(( {{ steps.calculate_age.outputs.age }} - 1 ))
-          sed -i "s/<span>$old_age</span>/<span>{{ steps.calculate_age.outputs.age }}</span>/" README.md
+          sed -i "s/<age>$old_age<age>/<age>{{ steps.calculate_age.outputs.age }}<age>/" README.md
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           git commit -am "[CHORE] Update age in README"
