--- a/.github/workflows/age.yml
+++ b/.github/workflows/age.yml
@@ -18,11 +18,11 @@ jobs:
           birth_year=2005
           age=$((current_year - birth_year))
           echo "age=$age" >> $GITHUB_OUTPUT
+          echo "old_age=$(( age - 1 ))" >> $GITHUB_OUTPUT
 
       - name: Update README
         run: |
-          old_age=$(( {{ steps.calculate_age.outputs.age }} - 1 ))
-          sed -i "s/<age>$old_age<age>/<age>{{ steps.calculate_age.outputs.age }}<age>/" README.md
+          sed -i "s/<age>{{ steps.calculate_age.outputs.old_age }}<age>/<age>{{ steps.calculate_age.outputs.age }}<age>/" README.md
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           git commit -am "[CHORE] Update age in README"
