--- a/.github/workflows/age.yml
+++ b/.github/workflows/age.yml
@@ -20,13 +20,12 @@ jobs:
           echo "age=$age" >> $GITHUB_OUTPUT
           echo "old_age=$(( age - 1 ))" >> $GITHUB_OUTPUT
 
-      - name: Print the old_age variable
-        run: |
-          echo "{{ steps.calculate_age.outputs.old_age }}"
-
       - name: Update README
+        env:
+          AGE: ${{ steps.calculate_age.outputs.age }}
+          OLD_AGE: ${{ steps.calculate_age.outputs.old_age }}
         run: |
-          sed -i "s/{{ steps.calculate_age.outputs.old_age }}/<age>{{ steps.calculate_age.outputs.age }}<age>/" README.md
+          sed -i "s/<span>$OLD_AGE<span>/<age>$AGE<age>/" README.md
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           git commit -am "[CHORE] Update age in README"
